--- a/sobrenos.html
+++ b/sobrenos.html
@@ -14,75 +14,150 @@
     <title>Sobre Nos🌈</title>
 </head>
 
-<body>
+<body class="sobrebody">
+    <header class="sobreheader">
 
-    <nav class="menu">
-        <div>
-            <ul>
+        <nav class="sobrenav">
+            <div>
+                <ul>
 
-                <li><a href="VICK.html"> TECNOTODES </a></li>
+                    <li><a href="VICK.html"> TECNOTODES </a></li>
 
-                <li><a href="sobrenos.html"> Sobre nos </a></li>
+                    <li><a href="sobrenos.html"> Sobre nos </a></li>
 
-                <li><a href="visão.html"> visão </a></li>
+                    <li><a href="visão.html"> visão </a></li>
 
-                <li><a href="fim.html"> resultados </a></li>
-
-
-            </ul>
-        </div>
+                    <li><a href="fim.html"> resultados </a></li>
 
 
-    </nav>
+                </ul>
+            </div>
 
+
+        </nav>
+        <title>Sobre Nos</title>
+    </header>
 
     <H1> O que é RAINBOWTEC🌈</H1>
 
+
+
     <section>
-        <p>
-            A RAINBOWTEC🌈 uma empresa voltada a inclusão social e empregabilidade da diversidade, buscando
-            profissionais
-            que possom se desenvolver e trabalhar sobre projetos da tecnologia na sociedades, ja que a diversidade faz
-            parte da sociedade nada melhor que ter esse reflexo na empresa.Nos prezamos pela individualidade de cada
-            individo e as qualidades que possam oferecer como criatividade propria e seus exemplos de visões das
-            situações.
-        </p>
 
-        <p>
-            Prezamos pela essencia e personalidade unica de cada individo e traz para seu nucleo essas qualidades que
-            tras inumeros beneficios a compos de ideias, projetos, visoes e imagem da empresa em inclusão.Porque todos
-            tem qualidades para entregar como diversos pensamentos unicos que podem trazer ideias e melhoria diversas
-            pela gama de pensamento que cada um possa ter.
-        </p>
+        <article class="sobreopiniao1">
+            <h3>
+                Ter essa essencia e entender que somos diversos como as cores e que o conjunto disso influencia no
+                sistema
+                natural e complementa a Natureza.
+            </h3>
+        </article>
 
-        <p>
-            A melhor reflexo dessa represetatividade e a diversidade, ja que faz parte da sociedade.E o melhor reflexo
-            para entender as necessidades da sociedades, como é ter essa representatividade dentro da empresa ?
-            Empresas adeptas da diversidade ganham visibilidade perante a concorrência. Negócios que demonstram domínio
-            e respeito por essas questões, se preocupando com o bem-estar dos indivíduos
-            Tem aumentado muito a credibilidade diante a sociedade.
-        </p>
+        <div class="sobretext1">
+            <p>
+                A RAINBOWTEC🌈 uma empresa voltada a inclusão social e empregabilidade da diversidade, buscando
+                profissionais
+                que possom se desenvolver e trabalhar sobre projetos da tecnologia na sociedades, ja que a diversidade
+                faz
+                parte da sociedade nada melhor que ter esse reflexo na empresa.Nos prezamos pela individualidade de cada
+                individo e as qualidades que possam oferecer como criatividade propria e seus exemplos de visões das
+                situações.
+            </p>
 
-        <p>
-            Ter essa essencia e entender que somos diversos como as cores e que o conjunto disso influencia no sistema
-            natural e complementar do todo a sociedade(Natureza).
-        </p>
+            <p>
+                Prezamos pela essência e personalidade unica de cada individo, traz para nosso nucleo, essas qualidades
+                que
+                trará inumeros beneficios a compos de ideias, projetos, visões e a imagem da empresa em inclusão.Porque
+                todos
+                tem qualidades para entregar como diversos pensamentos unicos que podem trazer ideias e melhoria
+                diversas,
+                pela gama de pensamento que cada um possa ter.
+            </p>
 
-        <p>
-            As discussões a respeito do multiculturalismo estão cada vez mais presentes em nossa sociedade e chegaram ao
-            mercado de trabalho. As novas gerações se posicionam cada vez mais a favor do respeito ao próximo, fazendo
-            com que a diversidade nas empresas seja uma discussão inevitável.
-        </p>
+            <P>
+                Empresas adeptas da diversidade ganham visibilidade perante a concorrência. Negócios que demonstram
+                domínio
+                e respeito por essas questões, se preocupando com o bem-estar dos indivíduos
+                Tem aumentado muito a credibilidade diante a sociedade.
+            </P>
+        </div>
 
-        <p>
-            Em paralelo a isso, aquelas que se antecipam e buscam aprimorar suas posturas em relação a essas questões tendem a aproveitar inúmeros benefícios. Não se trata de atender a uma moda passageira, mas sim de respeitar o progresso social pelo qual o mundo está passando.Aderir a essa cultura é urgente e necessário não só para obter visibilidade, mas também por questões sociais.
-        </p>
+        <article class="sobreopiniao2">
+            O melhor reflexo dessa represetatividade e a diversidade, ja que faz parte da sociedade.E o melhor reflexo.
+            Para entender as necessidades da sociedade, como é ter essa representatividade dentro da empresa ?
+        </article>
+
+        <div class="sobretext2">
+            <p>
+                As discussões a respeito do multiculturalismo estão cada vez mais presentes em nossa sociedade e
+                chegaram ao
+                mercado de trabalho. As novas gerações se posicionam cada vez mais a favor do respeito ao próximo,
+                fazendo
+                com que a diversidade nas empresas seja uma discussão inevitável.
+            </p>
+
+            <p>
+                Em paralelo a isso, aquelas que se antecipam e buscam aprimorar suas posturas em relação a essas
+                questões
+                tendem a aproveitar inúmeros benefícios. Não se trata de atender a uma moda passageira, mas sim de
+                respeitar
+                o progresso social pelo qual o mundo está passando.Aderir a essa cultura é urgente e necessário não só
+                para
+                obter visibilidade, mas também por questões sociais.
+            </p>
+
+            <p>
+                Promover a diversidade nas empresas é reunir, em um quadro de colaboradores, indivíduos que sofrem algum
+                tipo de rejeição social em razão de sua classe, gênero, etnia, deficiência, religião e outras questões
+                que
+                servem de gatilho para o preconceito e a intolerância.
+            </p>
+        </div>
+
+        <article class="sobreopiniao3">
+
+            <h2>
+                Ter essa ação tera uma credibilitade em todos os parametros positivo em visao da sociedade isso e otimo
+                para
+                credibilidade da Empresa.
+            </h2>
 
 
+        </article>
+        <div class="sobretext3">
+            <p>
+                Falar em diversidade humana significa ter representados todos os grupos da sociedade em um microcosmo.
+                No
+                caso, dessa empresa deseja ser vista como aberta à diversidade, isso significa abrir as suas portas
+                para
+                pessoas de qualquer origem e característica.
+            </p>
 
+            <p>
+                É importante ter em mente que trabalhar esse multiculturalismo não é uma questão de priorizar
+                determinados
+                grupos de pessoas, mas considerar as habilidades de qualquer profissional acima de suas escolhas
+                pessoais ou
+                características.
+            </p>
+
+            <p>A RAINBOWTEC🌈 tem como objetivo de mudar essa realidade para ter mais incluçoes no mercado de trabalho e
+                diminuir as taxas de desigualdade que a em nosso Pais.E buscar talentos que presisa somente de uma
+                oportunidade para poder brilhar. Com objetivo ispirado nos projetos da ODS da ONU em realizar uma
+                concretização dessa realidade ate 2030.
+
+            </p>
+        </div>
     </section>
 
+    <footer>
 
+        <h3>
+
+            <a class="conh3" href="visão.html">Continue em Resoluçao... <img src="boton-iris.jpg" width="70px">
+            </a>
+        </h3>
+
+    </footer>
 
 
 
