--- a/visão.html
+++ b/visão.html
@@ -45,7 +45,7 @@
             <article class="visaoopiniao2">
 
 
-                <H3>
+                <H3 class="h3visao1">
 
                     <p>
                         Abordando um assunto delicado mas muito importante a ser comentado.
@@ -96,10 +96,10 @@
         </div>
         <div class="visaoopiniao3">
             <ARTICLe>
-                <H3>
-                    Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compeendimento e
+                <H3 class="h3visao2">
+                    Ter essa consiencia que isso e uma visão real em nossa realidade atual ter esse compreendimento e
                     fechar
-                    os olhos sobre tais situaçoes nao podemos aceitar tais desigualdades.
+                    os olhos sobre tais situaçoes, não podemos aceitar tais desigualdades.
                 </H3>
 
             </ARTICLe>
