--- a/VICK.html
+++ b/VICK.html
@@ -36,7 +36,7 @@
         </nav>
 
 
-       
+
     </header>
 
 
@@ -53,8 +53,8 @@
             </p>
 
             <P>
-                Ser uma pessoa Lgbtqia+ e de querer ser uma pessoa da tecnoçogia, qual representatividade mais
-                adequada para esses dois significados em ter uma Empresa como a RAINBOWTEC🌈, unindo esses pensamentos
+                Ser uma pessoa Lgbtqia+ e de querer ser um profissional da tecnoçogia, qual representatividade mais
+                adequada para esses dois significados é ter uma Empresa como a RAINBOWTEC🌈, unindo esses pensamentos
                 para idealizar uma criação.Como seria uma empresa que fosse
                 acolhedora e plural como as cores?
             </P>
@@ -63,7 +63,7 @@
         <div class="vickopiniao1">
             <article class="vickopiniao1">
 
-                <H3>
+                <H3 class="h3vick1">
 
                     <p>
                         O Arco-íris representa o conjunto de todas as cores, e um fenômeno da natureza. As cores são
@@ -82,7 +82,7 @@
                 <h1>SÃO AS QUESTÕES</h1>
                 <dl>
 
-                    <dd>Como seria uma Empresa de Divercidades ?</dd>
+                    <dd>Como seria uma Empresa de Diversidades ?</dd>
                     <br>
                     <dd>O por que ter uma Empresa de Diversidades ?</dd>
                     <br>
@@ -98,17 +98,19 @@
 
         <div class="vickdivtext3">
             <P>
-                Com essas perguntas surgir a necessidade de elaborar e criar esse site para o compreendimento dessas
+                Com essas perguntas surgiu a necessidade de elaborar e criar esse site para o compreendimento dessas
                 ideias
-                e desejo.mas isso não e so uma ideia da criadora desse site e sim um desejo igual de todos da
-                diversidade
-                como; mulheres cis ;homens cis ;mulheres
-                trans;homens trans ;mulheres negras;homens negros ;heterossexuai ; homoxessuais ; bissexuais ; etc...
+                e desejos.Mas isso não é so uma ideia da criadora desse site e sim um desejo de todos da diversidade
+                como; mulheres cis ;homens cis ;mulheres trans;homens trans ;mulheres negras;homens negros
+                ;heterossexuais ; homoxessuais ; bissexuais ; etc...
+                Desejo de melhorias e Oportunidades.
+
             </P>
 
             <P>
-                Essas clasificaçao sao representadadas por cores do arco-ires que estao todos na natureza pertecentes a
+                Essas clasificaçao são representadadas por cores do arco-ires que estao todos na natureza pertecentes a
                 um todo.Entao todos pode e deve ter um direito de ser e permaneser.
+
             </P>
 
 
@@ -134,14 +136,22 @@
                 Percebemos que isso é o que todos queremos certo, mas se eu disser que nao e uma realidade para todos,
                 mesmo
                 sendo direito por natureza por pertencermos em meios de igualidade por natureza sendo a mesma especie e
-                direitos de viver como quisermos.
+                direitos de viver como quisermos.Porem isso não e uma realidade para todos.
             </p>
 
-            <p>
-                Mas entao porque surge tantas desigualdades ? isso e um pensamento que temos a anos em historia,
+            <P>
+                Apesar da existência de ações que visam combater a exclusão social no país, esse problema ainda é uma
+                realidade vigente que demanda atenção e atinge diversas camadas da sociedade.E a pergunta e: Por que
+                surge tantas desigualdades ?
+            </P>
+
+
+
+            <P> Isso e um pensamento que temos a anos em historia,
                 discutidos
-                por nos sociedades ate hoje em dia entre:pessoas;grupos;ongs;politicas...
-            </p>
+                por nos sociedade ate hoje em dia entre:Pessoas; Grupos; Ongs; Politicas...
+            </P>
+
 
         </div>
 
