--- a/sobrenos.html
+++ b/sobrenos.html
@@ -45,7 +45,7 @@
     <section>
 
         <article class="sobreopiniao1">
-            <h3>
+            <h3 class="h3sobre1">
                 Ter essa essencia e entender que somos diversos como as cores e que o conjunto disso influencia no
                 sistema
                 natural e complementa a Natureza.
@@ -82,8 +82,9 @@
         </div>
 
         <article class="sobreopiniao2">
-            O melhor reflexo dessa represetatividade e a diversidade, ja que faz parte da sociedade.E o melhor reflexo.
-            Para entender as necessidades da sociedade, como é ter essa representatividade dentro da empresa ?
+            <H3 class="h3sobre2"> 
+                O melhor reflexo dessa represetatividade e a diversidade, ja que faz parte tambem da sociedade.Para entender e representar as necessidades a essa parde da sociedade.
+            </H3>
         </article>
 
         <div class="sobretext2">
@@ -115,11 +116,11 @@
 
         <article class="sobreopiniao3">
 
-            <h2>
+            <h3 class="h3sobre3">
                 Ter essa ação tera uma credibilitade em todos os parametros positivo em visao da sociedade isso e otimo
                 para
                 credibilidade da Empresa.
-            </h2>
+            </h3>
 
 
         </article>
@@ -136,7 +137,7 @@
                 É importante ter em mente que trabalhar esse multiculturalismo não é uma questão de priorizar
                 determinados
                 grupos de pessoas, mas considerar as habilidades de qualquer profissional acima de suas escolhas
-                pessoais ou
+                pessoais e
                 características.
             </p>
 
