--- a/sobrenos.html
+++ b/sobrenos.html
@@ -23,11 +23,11 @@
 
                     <li><a href="VICK.html"> TECNOTODES </a></li>
 
-                    <li><a href="sobrenos.html"> Sobre nos </a></li>
+                    <li><a href="sobrenos.html"> Sobre Nos </a></li>
 
-                    <li><a href="visão.html"> visão </a></li>
+                    <li><a href="visão.html"> Visão </a></li>
 
-                    <li><a href="fim.html"> resultados </a></li>
+                    <li><a href="fim.html"> Resultados </a></li>
 
 
                 </ul>
