--- a/visão.html
+++ b/visão.html
@@ -20,7 +20,7 @@
             <div>
                 <ul>
 
-                    <li><a href="VICK.html"> TECNOTODES </a></li>
+                    <li><a href="VICK.html"> RAINBOWTEC🌈 </a></li>
 
                     <li><a href="sobrenos.html"> Sobre Nós </a></li>
 
@@ -198,9 +198,10 @@
             <P>Seguindo essa linha de propostas dos paises sitados pra desejo de leitura completa segui esse link:</P>
 
             <a href="https://www.ipea.gov.br/ods/ods10.html" target="_blank">10. Redução das Desigualdades</a>
+           <p> <img src="img.10.png" width="70px" ></p>
 
             <h4>5. Igualdade de Gênero</h4>
-
+ 
             <p>
                 Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas
             </p>
@@ -246,6 +247,8 @@
             <p>
                 Para continua o assunto link:
             </p><a href="https://www.ipea.gov.br/ods/ods5.html" target="_blank">5. Igualdade de Gênero</a>
+            <p> <img src="img.5.png" width="70px" ></p>
+
         </div>
 
 
