--- a/sobrenos.html
+++ b/sobrenos.html
@@ -21,9 +21,9 @@
             <div>
                 <ul>
 
-                    <li><a href="VICK.html"> TECNOTODES </a></li>
+                    <li><a href="VICK.html"> RAINBOWTEC🌈 </a></li>
 
-                    <li><a href="sobrenos.html"> Sobre Nos </a></li>
+                    <li><a href="sobrenos.html"> Sobre Nós </a></li>
 
                     <li><a href="visão.html"> Visão </a></li>
 
