--- a/fim.html
+++ b/fim.html
@@ -21,7 +21,7 @@
             <div>
                 <ul>
 
-                    <li><a href="VICK.html"> TECNOTODES </a></li>
+                    <li><a href="VICK.html"> RAINBOWTEC🌈</a></li>
 
                     <li><a href="sobrenos.html"> Sobre Nós </a></li>
 
@@ -84,11 +84,11 @@
 
         <article class="fimopiniao2">
 
-            <p>
+            <h3>
                 Quando pensamos nas questões sobre ética e respeito ao próximo, estamos tratando de valores. A empresa
                 precisa entender isso e disseminar uma cultura a favor de melhores práticas, comportamentos, posturas e
                 agregar esses valores em si.
-            </p>
+            </h3>
         </article>
 
         <div class="fimtext2">
@@ -108,12 +108,12 @@
         </div>
 
         <article class="fimopiniao3">
-            <p>
+            <h3>
                 Empresas adeptas da diversidade ganham visibilidade perante a concorrência. Negócios que demonstram
                 domínio
                 e
                 respeito por essas questões, se preocupando com o bem-estar dos indivíduos.
-            </p>
+            </h3>
         </article>
 
         <div class="fimtext3">
@@ -135,7 +135,7 @@
             </p>
         </div>
 
-        <h3> Venha fazer parte do desejo da RAINBOWTEC🌈</h3>
+        <h3 class="fimm"> Venha fazer parte do desejo da RAINBOWTEC🌈</h3>
 
 
     </section>
