--- a/sobrenos.html
+++ b/sobrenos.html
@@ -143,7 +143,7 @@
 
             <p>A RAINBOWTEC🌈 tem como objetivo de mudar essa realidade para ter mais incluçoes no mercado de trabalho e
                 diminuir as taxas de desigualdade que a em nosso Pais.E buscar talentos que presisa somente de uma
-                oportunidade para poder brilhar. Com objetivo ispirado nos projetos da ODS da ONU em realizar uma
+                oportunidade para poder brilhar. Com objetivo inspirado nos projetos da ODS da ONU em realizar uma
                 concretização dessa realidade ate 2030.
 
             </p>
