--- a/visão.html
+++ b/visão.html
@@ -260,7 +260,7 @@
 
         <h3>
 
-            <a class="conh3" href="fim.html">Continue em Resoluçao... <img src="boton-iris.jpg" width="70px">
+            <a class="conh3" href="fim.html">Continue em Resolução🌈... <img src="boton-iris.jpg" width="70px">
             </a>
         </h3>
 
