--- a/VICK.html
+++ b/VICK.html
@@ -172,7 +172,7 @@
     <footer>
         <h3>
 
-            <a class="conh3" href="sobrenos.html">Continua em Sobre Nós... <img src="boton-iris.jpg" width="70px">
+            <a class="conh3" href="sobrenos.html">Continua em Sobre Nós🌈... <img src="boton-iris.jpg" width="70px">
 
             </a>
         </h3>
