--- a/sobrenos.html
+++ b/sobrenos.html
@@ -154,7 +154,7 @@
 
         <h3>
 
-            <a class="conh3" href="visão.html">Continue em Resoluçao... <img src="boton-iris.jpg" width="70px">
+            <a class="conh3" href="visão.html">Continue em Visão🌈... <img src="boton-iris.jpg" width="70px">
             </a>
         </h3>
 
