--- a/fim.html
+++ b/fim.html
@@ -145,7 +145,7 @@
 
     <footer CLASS="FIMFOOTER">
 
-        <P>Obrigada por acompanhar ate aqui desejo que espande seus conhecimentos sobre esses assuntos.</P>
+        <P>Obrigada por acompanhar ate aqui desejo que expandem seus conhecimentos sobre esses assuntos.</P>
 
         <P> Dedico a todos em que me inspiraram a essa criação.</P>
 
